Melhoria nos cards e adição do json de lanches

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable = 0">
     <title>Làrrouse</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,8 @@
     <div class="models">
         <div class="element">
             <img src="" alt="" class="pizza1">
-            <div class="description">Mussarela</div> 
+            <div class="name">Mussarela</div> 
+            <span class="price"></span>
         </div>
     </div>
 
@@ -55,7 +56,7 @@
         </div><!--Fundo dos lanches-->
 
         <div class="quemsomos-title" id="partequemsomos">
-            <div class="q1"><img src="img/img pizza.jpg" alt=""></div>
+            <div class="q1"></div>
             <div class="q2">
                 <h1>Quem Somos</h1>
                 <p class="">Começamos com um pequeno estabelecimento de esquina e um sonho - trazer alegria através da comida. Acreditamos que o amor faz muita diferença na culinaria e queremos tornar isso visivel.</p>
