Adicionado conteudo a seção Lanches

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="pizza-title" id="partepizzas">
             <h1>Pizzas</h1>
         </div>
-        <div class="fundop">
+        <div class="fundop pizzas">
             <div class="conteudo">
                
 
@@ -47,7 +47,7 @@
         <div class="lanches-title" id="partelanches">
             <h1>Lanches</h1>
         </div>
-        <div class="fundop">
+        <div class="fundop lanches">
             <div class="conteudo">
                 
 
