Adicionei o botão Comprar

--- a/index.html
+++ b/index.html
@@ -73,8 +73,13 @@
                     <div class="descPizza i">...</div>
                     <div class="valorPizza i">...</div>
 
-                    <div class="closeModal">
-                        Cancelar
+                    <div class="modalActions">
+                        <div class="buy">
+                            Comprar
+                        </div>
+                        <div class="closeModal">
+                            Cancelar
+                        </div>
                     </div>
                 </div>
             </div>
